syntax = "proto3";
package pb;
option go_package = "./service/pb;pb";

//=====================增加任务======================
message AddRequest {
    uint64 id = 1;
    string title = 2;
    string content = 3;
}
message AddResponse {
    int64 code = 1;
    string msg = 2;
}

//===================删除任务==========================

message DelRequest {
    uint64 taskid = 1;
    uint64 userid = 2;
}

message DelResponse {
    int64 code = 1;
    string msg = 2;
}
//===================修改任务==========================

message UpdateRequest {
    uint64 taskid = 1;
    uint64 userid = 2;
    string title = 3;
    string content = 4;
}

message UpdateResponse {
    int64 code = 1;
    string msg = 2;
}


//===================获取所有任务==========================

message GetAllRequest {
    uint64 userid = 1;
}

message TaskInfo {
    uint64 id = 1;
    string title = 2;
    string content = 3;
    int64 created_at = 4;
    int64 updated_at = 5;
}

message GetAllResponse {
    int64 code = 1;
    string msg = 2;
    repeated TaskInfo tasks = 3;
}

//===================服务定义==========================

service TaskService {
    rpc AddTask(stream AddRequest) returns (stream AddResponse) {}
    rpc DeleteTask(stream DelRequest) returns (stream DelResponse) {}
    rpc UpdateTask(stream UpdateRequest) returns (stream UpdateResponse) {}
    rpc GetAllTasks(GetAllRequest) returns (GetAllResponse) {}
}
